Added symfony form and swift mailer capabilities to flux via their respective packages

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,12 @@
 	"require": {
 		"silex/silex": "1.1.*",
 		"twig/twig": "dev-master",
-		"symfony/twig-bridge": "~2.3"
+		"symfony/twig-bridge": "~2.3",
+		"symfony/form": "~2.3",
+		"symfony/validator": "~2.3",
+		"symfony/config": "~2.3",
+		"symfony/translation": "~2.3",
+		"symfony/locale": "~2.3",
+		"swiftmailer/swiftmailer": "v5.1.0"
 	}
 }
